# MCP-A2A-github_actions

./: .gitignore  README.md  a2a_system.py  devops_server.py  pyproject.toml
.github/workflows/: main.yml  workflow_20251130_182314.yml  workflow_20251130_182344.yml  workflow_20251130_213307.yml  workflow_20251130_213639.yml  workflow_20251130_213652.yml  workflow_20251201_000233.yml  workflow_20251201_001120.yml  workflow_20251201_002545.yml
